// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[html file]: about-mozilla.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\"><head>
  <title>The Book of Mozilla, 11:9</title>
  <style type=\\"text/css\\">
    html {
      background: maroon;
      color: white;
      font-style: italic;
    }    #moztext {
      margin-top: 15%;
      font-size: 1.1em;
      font-family: serif;
      text-align: center;
      line-height: 1.5;
    }    #from {
      font-size: 1.95em;
      font-family: serif;
      text-align: right;
    }    em {
      font-size: 1.3em;
      line-height: 0;
    }    a {
      text-decoration: none;
      color: white;
    }
  </style>
</head><body>  <p id=\\"moztext\\">
    Mammon slept. And the <em>beast reborn</em> spread over the earth and its numbers
    grew legion. And they proclaimed the times and <em>sacrificed</em> crops unto the
    fire, with the <em>cunning of foxes</em>. And they built a new world in their own
    image as promised by the <em><a href=\\"http://www.mozilla.org/about/mozilla-manifesto.html\\">
        sacred words</a></em>, and <em><a href=\\"http://wiki.mozilla.org/About:mozilla\\">spoke
      </a></em> of the beast with their children. Mammon awoke, and lo! it was
    <em>naught</em> but a follower.
  </p>  <p id=\\"from\\">
    from <strong>The Book of Mozilla,</strong> 11:9<br /><small>(10th Edition)</small>
  </p></body></html>"
`;

exports[`[html file]: basic.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>Document</title>
</head><body></body></html>"
`;

exports[`[html file]: cors-style-sheet.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>with style sheet</title>
  <link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/pure@2.85.0/index.css\\" />
</head><body></body></html>"
`;

exports[`[html file]: form-fields.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>form fields</title>
</head><body>
  <form>
    <label for=\\"text\\">
      <input type=\\"text\\" value=\\"1\\" />
    </label>
    <label for=\\"radio\\">
      <input type=\\"radio\\" checked=\\"\\" />
    </label>
    <label for=\\"checkbox\\">
      <input type=\\"checkbox\\" checked=\\"\\" />
    </label>
    <label for=\\"textarea\\">
      <textarea name=\\"\\" id=\\"\\" cols=\\"30\\" rows=\\"10\\" value=\\"1234\\">1234</textarea>
    </label>
    <label for=\\"select\\">
      <select name=\\"\\" id=\\"\\" value=\\"2\\">
        <option value=\\"1\\">1</option>
        <option value=\\"2\\" selected=\\"\\">2</option>
      </select>
    </label>
  </form><noscript>SCRIPT_PLACEHOLDER</noscript>
</body></html>"
`;

exports[`[html file]: hover.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>hover selector</title>
  <style>    div:hover, div.\\\\:hover {
      background: orange;
    }    div:hover::after, div.\\\\:hover::after {
      position: absolute;
      left: 0;
      top: 100%;
      content: 'dropdown';
      width: 100px;
      height: 200px;
      background: lightblue;
    }
  </style>
</head><body>
  <div>hover me</div>
</body></html>"
`;

exports[`[html file]: iframe.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>iframe</title>
</head>
<body>
  <iframe width=\\"100\\" height=\\"50\\"></iframe>
</body></html>"
`;

exports[`[html file]: iframe-inner.html 1`] = `
"<html xmlns=\\"http://www.w3.org/1999/xhtml\\"><head></head><body><button>inner iframe button</button>
</body></html>"
`;

exports[`[html file]: invalid-attribute.html 1`] = `
"<html xmlns=\\"http://www.w3.org/1999/xhtml\\" foo=\\"bar\\"><head></head><body>
</body></html>"
`;

exports[`[html file]: with-relative-res.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>Document</title>
</head>
<body>
  <a href=\\"http://localhost:3030/basic.html\\"></a>
  <img src=\\"http://localhost:3030/a.jpg\\" alt=\\"\\" srcset=\\"\\" /></body></html>"
`;

exports[`[html file]: with-script.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>with script</title>
</head><body>
  <noscript src=\\"http://localhost:3030/js/a.js\\"></noscript>
  <noscript>SCRIPT_PLACEHOLDER</noscript></body></html>"
`;

exports[`[html file]: with-style-sheet.html 1`] = `
"<!DOCTYPE html><html xmlns=\\"http://www.w3.org/1999/xhtml\\" lang=\\"en\\"><head>
  <meta charset=\\"UTF-8\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\" />
  <title>with style sheet</title>
  <style _csstext=\\"body { margin: 0px; background: url('http://localhost:3030/a.jpg'); }p { color: red; background: url('http://localhost:3030/css/b.jpg'); }body &gt; p { color: yellow; }\\">body { margin: 0px; background: url('http://localhost:3030/a.jpg'); }p { color: red; background: url('http://localhost:3030/css/b.jpg'); }body &gt; p { color: yellow; }</style>
</head><body>
</body></html>"
`;
